--- a/style.css
+++ b/style.css
@@ -1,145 +1,135 @@
+
 *{
-	box-sizing: border-box;
+  box-sizing: border-box;
 }
-body{
-	margin: 0px;
-	padding: 0px;
-	background-color: lightgrey;
-	
+body {
+	background: #F0EAD6;/*url("images/background.png") repeat;*/
 }
-.header{
-	margin-top: -40px;
-	padding: 0px;
-	background:hotginger;
-	height: 50px;
-	font-weight: bold;
+#main-head{
+background: #2A4B7C;
+color: white;
+}
+
+
+#main-head h1{
 	text-align: center;
-	
-	
-}
-.header > p{
 	padding: 20px;
-	font-size: 30px;
+	text-transform: capitalize;
+	letter-spacing: 0.01em;
+	font-family:serif arial;
 }
-#nav_ul{
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-  background: indigo;
+.a1 {
+ 	width: 98.2%;
+ 	border: 2px solid #000075;
 }
+.container{
+	position: sticky;
+	top: 0px;
+}
+#nav1{
+	width: 100%;
+	background:#264E36;
+	height: 50px;
+	margin-left:0px;
+  box-shadow:0 0 10px #333;
+}
+nav ul li {
+	display: inline;
 
 
-#nav_ul a:hover {
-  background-color:yellow;
-  color: black;
 }
-
-#nav_ul>li {
-  float: left;
+nav ul li a{
+	margin-top:0px;
+ 	color: white;
+ 	font-weight: bold; 
+ 	display: inline-block;
+ 	padding: 15px;
+ 	width: 100px;
+ 	text-align: center;
+ 	text-decoration: none;
 }
+ nav ul li a:hover {
+ 	color: white;
+ 	background-color: #008000;
+ }
+  nav ul li a:active {
+ 	background-color: #808000;
+ }
+ nav ul li a:active {
+ 	color: #008080;
+ 	background-color: #FFFFFF;
+ }
+ .social{
+  position: fixed;
+  bottom: 200px;
+  width: 190px;
+  height: 200px;
+  background:#ded;
+  box-shadow:0 0 10px #333;
+  border-radius:12px;
+  
+  
 
-#nav_ul>li a {
-  display:block;
-  color: white;
+}
+.social ul li{
+  margin-left: 0px;
+  list-style: none;
+  padding: 10px 0px;
+  text-transform:capitalize;
+}
+ iframe{border: 1px solid grey ;
+  margin-left: 200px;
+  background-color: white;
+  background: url("background.png") repeat;
+ }
+
+ .footers {
+  position: relative;
+ 	width: 99%;
+ 	color: white;
+ 	font-weight: bold;
+ 	font-size: 16px;
+ 	min-height: 200px;
+ 	background-color:#00004d;
+  opacity: ;
+}
+.footers .copy{
   text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
 }
-.aside>ul{
- list-style-type: none;
-  margin: 0;
-  padding: 0;
-  background:gray;
-  width: 20%;
-  display: inline-block;
-}
-.aside>ul>li a {
-  text-decoration: none;
-  color: white;
-  padding: 10px; 10px;
-}
-.fprofile{
-	height:200px;
-	width: 53%;
-	background-color: darkcyan;
-	display: inline-block;
-	position: relative;
-	left: 21%;
-	top: -50px;
-}
-.profile{
-	width: 190px;
-	height: 190px;
-	border-radius:360px;
-    float: left;
-    padding:-10px;
-    margin-left:4px;
+.technologies{
+  padding: 20px;
+    display: grid;
+    grid-template-columns:30% 30% 30%;
+    gap:44px;
   }
-.about{
-	padding: 10px;
-	width: 53%;
-	background-color: lightcyan;
-	text-align: justify;
-	position: relative;
-	left: 21%;
-	top: -40px;
+  .forms{
+    display: none;
+  }
+  @media screen and (max-width: 800px) {
+  img { 
+  margin-left: 0px;  
+    width: 100%;
+    padding: 0;
+  }
+  .technologies{
+  padding: 20px;
+    display: grid;
+    grid-template-columns:100%;
+    gap:5px;
+  }
 }
-.content{
-	background-color: white;
-}
-.lis{
-	width: 53%;
-	background-color: hotcyan;
-	position: relative;
-	left: 21%;
-	top: -30px;
-	font-weight: bold;
-}
-.lis>.fst{
-	list-style-type: upper-alpha;
-	width: 47%;
-	display: inline-block;
-	background-color: brown;
-	color: black;
-	margin-left: 10px;
 
-}
-.lis>.scd{
-	list-style-type: upper-roman;
-	width: 47%;
-	display: inline-block;
-	background-color: forestgreen;
-	color: white;
-	margin-left: 20px;
-	
-}
-footer{
-	background-color: dimgrey;
-	text-align: center;
-	padding: 10px;
-	color: white;
-	position: relative;
-	top: 35px;
-}
-#lol{
-	margin-left:1000px;
-	margin-top:-580px;
-	
-}
-#kk{
-	width:300px;
-	height: 150px;
-	padding:10px;
-	margin-top:60px;
-}
-#kkk{
-	width:300px;
-	height:150px;
-	padding:10px;
-}
-#kkhh{
-	width:300px;
-	height: 150px;
-	padding: 10px;
+/* Responsive layout - when the screen is less than 800px wide, make the two columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 800px) {
+  iframe { 
+  margin-left: 0px;  
+    width: 100%;
+    padding: 0;
+  }
+  .social{
+    display: none;
+  }
+  .right{
+    display: none;
+  }
 }
